# PythonWeb_mod_13-2

./: .env.example  pyproject.toml
my_project/: Dockerfile  db.sqlite3
my_project/app_auth/: forms.py  models.py  urls.py  views.py
my_project/app_auth/migrations/: 0001_initial.py
my_project/app_auth/templates/app_auth/: home.html  logout.html  signin.html  signup.html  upload.html  upload_authors.html  upload_quotes.html
my_project/my_project/: settings.py  urls.py
my_project/quotes_by_great_authors/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
my_project/quotes_by_great_authors/migrations/: 0001_initial.py
my_project/quotes_by_great_authors/static/quotes_by_great_authors/: style.css
my_project/quotes_by_great_authors/templates/quotes_by_great_authors/: base.html  index.html
my_project/quotes_by_great_authors/templatetags/: extract.py
my_project/users/: views.py
my_project/utils/: add_quotes_to_mongo.py  migration.py  quotes.json
